# autoresearch-jax

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  train.py
tests/: conftest.py  test_prepare.py  test_train.py
